add targets for cleaning and to create deb package

--- a/package/Makefile
+++ b/package/Makefile
@@ -52,9 +52,15 @@ BZRTREES?=http://bzr.freestandards.org/lsb/3.1
 BZR_MODULE=qmtest-harness
 
 # Default target
-all: rpm_package
+all: rpm_package deb_package
+
+clean:
+	@rm -f *.rpm *.deb *.tar.gz
 
 tarball: $(TARBALL) 
+
+deb_package: rpm_package
+	@fakeroot alien -cdk $(RPM_BINARY_NAME)
 
 rpm_package: $(RPM_BINARY_NAME) $(RPM_SOURCE_NAME) 
 
