Rework Makefile/spec so src.rpms do not need to use --define (bug 2499) Try a different url for the upstream tarball, old one is 404

--- a/package/Makefile
+++ b/package/Makefile
@@ -1,11 +1,10 @@
-# XXX We should play the usual tricks defining stuff here and building
-# XXX a specfile from this info, but not yet: for now keep in sync
+# values passed to the spec file
 PACKAGE=lsb-qm
 REAL_NAME=qmtest
 VERSION=2.2
 LSBSpec=4.0
 LSBRelease=4
-RELEASE=9
+RELEASE=10
 
 #
 # Derive date string for daily snapshots
@@ -61,9 +60,13 @@ all: rpm_package
 endif
 
 clean:
-	@rm -f *.rpm *.deb
+	@rm -f *.rpm *.deb $(PACKAGE).spec
 
 tarball: $(TARBALL) 
+
+# Specfile generation rule
+%.spec : %.spec.sed
+	sed -e "s#@LSBRELEASE@#`echo $(LSBRelease)`#" -e "s#@VERSION@#`echo $(VERSION)`#" -e "s#@RELEASE@#`echo $(RELEASE)`#" < $< > $@
 
 deb_package: rpm_package
 	@fakeroot alien -cdk $(RPM_BINARY_NAME)
@@ -81,15 +84,15 @@ $(RPM_BINARY_NAME) $(RPM_SOURCE_NAME): $(PACKAGE).spec $(TARBALL)
 	@mkdir -p $(RPM_TMP_BUILD_DIR)/RPMS
 	@mkdir -p $(RPM_TMP_BUILD_DIR)/SRPMS
 ifdef SIGN_PACKAGES
-	@expect -c 'set timeout -1' -c 'spawn $(RPM_BUILD_CMD) --sign --rcfile ${RCFILELIST} --define=_sourcedir\ $(PWD) --define=_topdir\ $(RPM_TMP_BUILD_DIR) --define=_target_cpu\ $(RPM_BUILD_ARCH) --define=ver\ $(VERSION) --define=rel\ $(RELEASE) --define=LSBRelease\ $(LSBRelease) -ba $(PACKAGE).spec' -c 'expect -ex "Enter pass phrase:"' -c 'send "\n"' -c 'expect "Executing(%clean)"' -c 'expect "exit 0"' -c 'send "\n"'
+	@expect -c 'set timeout -1' -c 'spawn $(RPM_BUILD_CMD) --sign --rcfile ${RCFILELIST} --define=_sourcedir\ $(PWD) --define=_topdir\ $(RPM_TMP_BUILD_DIR) --define=_target_cpu\ $(RPM_BUILD_ARCH) -ba $(PACKAGE).spec' -c 'expect -ex "Enter pass phrase:"' -c 'send "\n"' -c 'expect "Executing(%clean)"' -c 'expect "exit 0"' -c 'send "\n"'
 else
-	@$(RPM_BUILD_CMD) --rcfile ${RCFILELIST} --define="_sourcedir $(PWD)" --define="_topdir $(RPM_TMP_BUILD_DIR)" --define="_target_cpu $(RPM_BUILD_ARCH)" --define="ver $(VERSION)" --define="rel $(RELEASE)" --define="LSBRelease $(LSBRelease)" -ba $(PACKAGE).spec
+	@$(RPM_BUILD_CMD) --rcfile ${RCFILELIST} --define="_sourcedir $(PWD)" --define="_topdir $(RPM_TMP_BUILD_DIR)" --define="_target_cpu $(RPM_BUILD_ARCH)" -ba $(PACKAGE).spec
 endif
 	@mv $(RPM_SRPM_DIR)/$(RPM_SOURCE_NAME) .
 	@mv $(RPM_BINARY_DIR)/$(RPM_BINARY_NAME) .
 	@rm -rf $(RPM_TMP_BUILD_DIR)
 
 $(TARBALL):
-	wget http://ftp.de.debian.org/debian/pool/main/q/qm/$(TARBALL)
+	wget http://einstein.speech-design.de/ftppub/debian/pool/main/q/qm/$(TARBALL)
 
 .PHONY : tarball rpm_package
